# sg-listing-intelligence-dashboard

./: .gitignore  Makefile  README.md  pyproject.toml
app/: streamlit_app.py
docs/: app.js  index.html  style.css
docs/assets/: dashboard-data.json  manifest.json
scripts/: export_static_data.py  refresh_from_pg_snapshot.sh  run_local_etl.sh
src/sg_listing_intel/: __init__.py  db.py  etl.py
tests/: test_etl_smoke.py
